--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.8",
-    "typescript": "~5.8.3"
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
