--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
